@@ -29,6 +29,10 @@
 # include <stdlib.h>
 #endif
 
+#if defined(OMPT_SUPPORT)
+# include "ompt-wrapper.h"
+#endif
+
 /*
    Default routines
    1 thread in total, and thread id is always 0
@@ -76,8 +80,17 @@ extern int css_get_max_threads();
 
 unsigned Extrae_get_thread_number (void)
 {
-#if defined(OMP_SUPPORT) && !defined(OMPT_INSTRUMENTATION)
-	return omp_get_thread_num();
+#if defined(OMP_SUPPORT) 
+# if defined(OMPT_SUPPORT)
+	if (ompt_enabled)
+	{
+		return get_thread_num();
+	}
+	else
+# endif /* OMPT_SUPPORT */
+	{
+		return omp_get_thread_num();
+	}
 #elif defined(SMPSS_SUPPORT)
 	return css_get_thread_num();
 #elif defined(NANOS_SUPPORT)
@@ -94,8 +107,17 @@ unsigned Extrae_get_thread_number (void)
 
 void * Extrae_get_thread_number_function (void)
 {
-#if defined(OMP_SUPPORT) && !defined(OMPT_INSTRUMENTATION)
-	return (void*) omp_get_thread_num;
+#if defined(OMP_SUPPORT) 
+# if defined(OMPT_SUPPORT)
+	if (ompt_enabled)
+	{
+		return get_thread_num;
+	}
+	else
+# endif /* OMPT_SUPPORT */
+	{
+		return (void*) omp_get_thread_num;
+	} 
 #elif defined(SMPSS_SUPPORT)
 	return css_get_thread_num;
 #elif defined(NANOS_SUPPORT)
@@ -112,8 +134,17 @@ void * Extrae_get_thread_number_function (void)
 
 unsigned Extrae_get_num_threads (void)
 {
-#if defined(OMP_SUPPORT) && !defined(OMPT_INSTRUMENTATION)
-	return omp_get_num_threads();
+#if defined(OMP_SUPPORT) 
+# if defined(OMPT_SUPPORT)
+	if (ompt_enabled)
+	{
+		return get_num_threads();
+	}
+	else 
+# endif /* OMPT_SUPPORT */
+	{
+		return omp_get_num_threads();
+	}
 #elif defined(SMPSS_SUPPORT)
 	return css_get_max_threads();
 #elif defined(NANOS_SUPPORT)
