@@ -25,9 +25,17 @@
 #define OMP_COMMON_H_
 
 #include <omp.h>
+
+#include "config.h"
 #include "ompt-wrapper.h"
 
-#define TRACE(func) ((func != NULL) && (EXTRAE_INITIALIZED()) && (EXTRAE_ON()) && (!ompt_enabled))
+#define INSTRUMENT_OMP_WRAPPER(func) ((func != NULL) && (EXTRAE_INITIALIZED()) && (EXTRAE_ON()))
+
+#if defined(OMPT_SUPPORT)
+#define TRACE(func) (INSTRUMENT_OMP_WRAPPER(func) && (!ompt_enabled))
+#else
+#define TRACE(func) (INSTRUMENT_OMP_WRAPPER(func))
+#endif
 
 #define ENV_VAR_EXTRAE_OPENMP_HELPERS "EXTRAE_OPENMP_HELPERS"                   
 #define DEFAULT_OPENMP_HELPERS        100000                                    
